# HallmasterAPI

./: README.md  hallmasterapi.py  pyproject.toml
src/hallmasterapi/: __init__.py  hallmasterapi.py
