[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "HallmasterAPI"
version = "0.1.4"
authors = [
  { name="Matthew Larby" },
]
description = "Python wrapper for the Hallmaster API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "beautifulsoup4",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mattl1598/HallmasterAPI"
"Bug Tracker" = "https://github.com/mattl1598/HallmasterAPI/issues"